# qpid-imperative-proton

./: .gitignore  CMakeLists.txt  README.md  build.sh  check-quality-gates.sh
cmake-cfg/: CompilerFlags.cmake  FindGtest.cmake  FindQpidProton.cmake
include/proton/imperative/: CloseRegistry.hpp  Connection.hpp  Container.hpp  Delivery.hpp  Fwd.hpp  PnObjectLifeManager.hpp  PromiseWithActiveFlag.hpp  Receiver.hpp  Sender.hpp  Session.hpp  ThreadRAII.hpp  config.hpp
scripts/: build.sh  create-VS-project.bat  test.sh
src/: CloseRegistry.cpp  Connection.cpp  Container.cpp  Delivery.cpp  Logger.hpp  PnObjectLifeManager.cpp  PromiseWithActiveFlag.cpp  Receiver.cpp  Sender.cpp  Session.cpp  ThreadRAII.cpp  ThreadRAII.hpp
test/: Broker.hpp  CMakeLists.txt  CMakelists.txt  ConnectionTest.cpp  Constants.hpp  ContainerTest.cpp  DeliveryTest.cpp  Main.cpp  ProtonIncludes.hpp  ReceiverTest.cpp  SenderTest.cpp  SessionTest.cpp
